# lab

./: .bazelrc  .clang-format  .env  .gitignore  .gitmodules  Makefile  WORKSPACE  docker-compose.yml  go.mod  go.sum  package-lock.json  package.json
bpf/ubuntu/: Vagrantfile
c/assembly/: main.c  main.s
cc/clangd/: CMakeLists.txt
cc/clangd/source/exe/: main.cc
cc/clangd/source/foo/: foo.cc  foo.h
cc/emscripten/: Dockerfile
cc/jwt/: CMakeLists.txt  Makefile  main.cc
containers/envoy-builder/: Dockerfile
containers/go/: Dockerfile
containers/protoc/: Dockerfile
envoy/authority/: Dockerfile  main.go
envoy/control-plane/: envoy.yaml
envoy/grpc-test/: envoy.yaml
envoy/upstream/: Dockerfile  go.mod  main.go
go/bazel/container/: BUILD.bazel  WORKSPACE  main.go
go/bazel/container/bazel/: status.sh
go/clipboard/: main.go
go/control_plane/: main.go
go/debug/: debug.go  debug_test.go
go/elasticsearch/: main.go
go/logr/: main.go
go/rlock/: main.go
go/tools/: tools.go
go/wasm/: index.html  main.go  main.wasm
grpc-web/: envoy.yaml  index.html
grpc-web/client/: client.js  dist.js
grpc-web/server/: main.go
kubernetes/authority/: deployment.yaml  namespace.yaml  service.yaml
kubernetes/controller-runtime/: Dockerfile  cluster_role.yaml  cluster_role_binding.yaml  deployment.yaml  main.go  namespace.yaml  reconciler.go
kubernetes/crd/: istio.yaml
kubernetes/grpcserver1/: deployment.yaml  namespace.yaml  sidecar.yaml
kubernetes/grpcserver2/: authorization_policy.yaml  deployment.yaml  namespace.yaml  policy.yaml  rule.yaml  virtualservice.yaml
kubernetes/istio-control/: autoinject.yaml  discovery.yaml  namespace.yaml
kubernetes/istio-control-canary/: autoinject.yaml  discovery.yaml
kubernetes/istio-control-master/: autoinject.yaml  discovery.yaml  namespace.yaml
kubernetes/istio-lab/: destination.yaml  envoy_filter.yaml  namespace.yaml  origin-service.yaml  replication-service.yaml  virtual_service.yaml
kubernetes/istio-master/: autoinject.yaml  discovery.yaml  namespace.yaml
kubernetes/istio-policy/: mixer.yaml  namespace.yaml
kubernetes/istio-system/: citadel.yaml  namespace.yaml
kubernetes/istio-telemetry/: grafana.yaml  mixer.yaml  namespace.yaml  prometheus.yaml
kubernetes/istio-telemetry-master/: mixer.yaml  namespace.yaml
kubernetes/skaffold/: deployment.yaml  skaffold.yaml
linux/ubuntu/: Vagrantfile
lua/redis/: luarocks-list  main.lua
proto/: go.mod
proto/echo/: server.pb.go  server.proto  server_grpc_web_pb.js  server_pb.js
proto/grpcserver/: grpcserver.pb.go  grpcserver.proto  grpcserver_grpc_web_pb.js  grpcserver_pb.js
rust/branches/: Cargo.toml
rust/functions/: Cargo.toml
script/: create-local-registry.sh
(+78 files in other folders)
